Fix of th column nowrap mixin title

--- a/workspace/assets/css/site/flexbox.less
+++ b/workspace/assets/css/site/flexbox.less
@@ -201,6 +201,6 @@
 	.flex-flow(column wrap);
 }
 
-.flex-flow-column-wrap {
+.flex-flow-column-no-wrap {
 	.flex-flow(column nowrap);
 }
